# Chimera

./: .gitignore  .gitmodules  .lintstagedrc.js  .oxlintrc.json  .prettierignore  .prettierrc.cjs  .stylelintrc.js  AGENTS.md  CHANGELOG.md  DEV.md  README.en.md  README.fa.md  README.md  README.ru.md  eslint.config.js  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: ci.yaml  daily.yml  deps-build-linux.yaml  deps-build-macos.yaml  deps-build-windows-nsis.yaml  deps-create-updater.yaml  deps-delete-releases.yaml  deps-update-tag.yaml  publish.yaml  renovate-artifacts.yaml  renovate.yaml  target-dev-build.yaml  target-release-build.yaml
backend/: Cargo.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/chimera-macro/: Cargo.toml
backend/chimera-macro/src/: enum_wrapper_combined.rs  lib.rs
backend/tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
backend/tauri/capabilities/: default.json  main-capability.json
backend/tauri/locales/: en.json  zh-cn.json  zh-tw.json
backend/tauri/overrides/: fixed-webview2.conf.json  nightly.conf.json
backend/tauri/src/: consts.rs  feat.rs  ipc.rs  lib.rs  main.rs  shutdown_hook.rs  specta_export.rs  window.rs
backend/tauri/src/config/: core.rs  draft.rs  mod.rs  runtime.rs
backend/tauri/src/config/chimera/: logging.rs  mod.rs
backend/tauri/src/config/clash/: mod.rs
backend/tauri/src/config/profile/: builder.rs  item_type.rs  mod.rs  profiles.rs
backend/tauri/src/config/profile/item/: local.rs  mod.rs  remote.rs  shared.rs  utils.rs
backend/tauri/src/core/: connection_interruption.rs  handle.rs  mod.rs  state.rs  storage.rs  sysopt.rs
backend/tauri/src/core/clash/: api.rs  core.rs  mod.rs  proxies.rs  ws.rs
backend/tauri/src/core/server/: mod.rs
backend/tauri/src/core/service/: control.rs  ipc.rs  mod.rs
backend/tauri/src/core/tray/: mod.rs
backend/tauri/src/core/updater/: instance.rs  mod.rs  shared.rs
backend/tauri/src/enhance/: chain.rs  field.rs  mod.rs  tun.rs  utils.rs
backend/tauri/src/enhance/script/: runner.rs
backend/tauri/src/features/: mod.rs
backend/tauri/src/features/agent/: actions.rs  commands.rs  core_probe.rs  diagnostics.rs  mod.rs  model.rs
backend/tauri/src/utils/: candy.rs  collect.rs  config.rs  dirs.rs  downloader.rs  help.rs  mod.rs  net.rs  open.rs  resolve.rs  sudo.rs  winreg.rs
backend/tauri/src/utils/init/: logging.rs  mod.rs
frontend/chimera/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/chimera/messages/: en.json  ru.json  zh-cn.json  zh-tw.json
frontend/chimera/src/: App.tsx  consts.ts  index.html  main.tsx  routeTree.gen.ts
frontend/chimera/src/assets/styles/: tailwind.css
frontend/chimera/src/components/app/: app-container.tsx  drawer-content.tsx  locales-provider.tsx
frontend/chimera/src/components/base/: base-notice.tsx  content-display.tsx  index.ts
frontend/chimera/src/components/connections/: close-connections-button.tsx  connection-detail-dialog.tsx  connection-page.tsx  connection-search-term.tsx  (+4 more)
frontend/chimera/src/hooks/: theme.ts  use-consts.ts  use-custom-css.ts  use-is-moblie.tsx  use-lock-fn.ts  use-proxy-settings.ts  use-store.ts  use-updater.ts  use-window-maximized.ts
frontend/chimera/src/locales/: en.json  ru.json  zh-CN.json  zh-TW.json
frontend/chimera/src/pages/: __root.tsx  _layout.tsx  connections.tsx  dashboard.tsx  index.tsx  logs.tsx  profiles.tsx  providers.tsx  proxies.tsx  rules.tsx  settings.tsx
frontend/chimera/src/services/: frontend-console-bridge.ts  i18n.ts  monaco.ts  storage.ts  types.d.ts
frontend/chimera/src/store/: clash.ts  index.ts  proxies.ts  service.ts  updater.ts
frontend/chimera/src/utils/: chain.ts  custom-css-compiler.ts  get-system.ts  index.ts  language-new.ts  language.ts  monaco-yaml.worker.ts  mui-theme.ts  notification.ts  parse-traffic.ts  shiki.ts  styled.ts
frontend/interface/: package.json  tsconfig.json
frontend/interface/src/: index.ts
frontend/interface/src/hooks/: index.ts  use-kv-storage.ts
frontend/interface/src/ipc/: bindings.ts  consts.ts  index.ts  use-clash-config.ts  use-clash-connections.ts  use-clash-core-config.ts  use-clash-cores.ts  use-clash-info.ts  use-clash-logs.ts  use-clash-memory.ts  use-clash-proxies-provider.ts  use-clash-proxies.ts  use-clash-rules-provider.ts  use-clash-rules.ts  use-clash-traffic.ts  use-clash-version.ts  use-clash-web-socket.ts  use-platform.ts  use-profile-content.ts  use-profile.ts  use-proxy-mode.ts  use-runtime-profile.ts  use-settings.ts  use-system-proxy.ts  use-system-service.ts
frontend/interface/src/provider/: clash-ws-provider.tsx  index.tsx  mutation-provider.tsx
frontend/interface/src/service/: clash-api.ts  index.ts  tauri.ts  types.ts
frontend/interface/src/template/: index.ts
frontend/interface/src/utils/: index.ts
frontend/ui/: package.json  tsconfig.json
frontend/ui/src/: index.ts
frontend/ui/src/hooks/: get-system.ts  index.tsx  use-breakpoint.ts  use-click-position.ts
frontend/ui/src/materialYou/: createTheme.ts  index.ts  themeConsts.ts
frontend/ui/src/utils/: color-mix.ts  event.ts  index.ts  index.tsx
frontend/utils/: package.json  tsconfig.json
frontend/utils/src/: color.ts  index.ts
manifest/: version.json
scripts/: check.ts  deno.jsonc  extract-data-slots.ts  generate-git-info.ts  generate-latest-version.ts  manifest.ts  package.json  prepare-nightly.ts  publish.ts  tsconfig.json  updater-nightly.ts  updater.ts
scripts/deno/: upload-build-artifacts.ts  upload-macos-updater.ts
scripts/deno/utils/: cache-client.ts  file-server.ts  logger.ts
scripts/manifest/: chimera-client.ts  clash-meta.ts  clash-rs.ts  index.ts
scripts/types/: index.ts
scripts/utils/: arch-check.ts  chimera-service-resource.ts  consts.ts  download.ts  env.ts  index.ts  manifest.ts  octokit.ts  resolve.ts  resource.ts
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+254 files in other folders)
