[package]
name = "chimera"
version = "0.1.0"
description = "A Tauri App"
authors = ["chimera_rust@proton.me"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chimera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = [
  "serde",
  "serde_json",
  "serde_yaml",
  "uuid",
  "url",
  "indexmap",
  "function",
] }

once_cell = "1.19.0"

parking_lot = { version = "0.12.1" }
# for builder pattern
derive_builder = "0.20"

url = "2"

anyhow = "1.0"

thiserror = { workspace = true }
# 
chimera-macro = { path = "../chimera-macro" }

nanoid = "0.4.0"

reqwest = { workspace = true }

[features]
default = ["default-meta"]
nightly = []
verge-dev = []
default-meta = []
