[package]
name = "chimera"
version = "0.1.0"
description = "A Tauri App"
authors = ["chimera_rust@proton.me"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chimera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
semver = "1.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = [
  "serde",
  "serde_json",
  "serde_yaml",
  "uuid",
  "url",
  "indexmap",
  "function",
] }
# Strong typed api binding between typescript and rust
specta-typescript = "0.0.9"

once_cell = "1.19.0"

parking_lot = { version = "0.12.1" }
# for builder pattern
derive_builder = "0.20"

url = "2"

anyhow = "1.0"

thiserror = { workspace = true }
# 
chimera-macro = { path = "../chimera-macro" }

nanoid = "0.4.0"

reqwest = { workspace = true }

backon = { version = "1.0.1", features = ["tokio-sleep"] }                # for backoff retry

base64 = "0.22"
percent-encoding = "2.3.1"

# todo: use another crate.
serde_yaml = { version = "0.9" }

ambassador = "0.4.1"                                                      # for trait delegation

# Common Utilities
tokio = { workspace = true }

# System Utilities
dunce = "1.0.4"   
which = "8"
open = "5.0.1"

fs-err = { version = "3.1.2", features = ["tokio"] }

convert_case = "0.8.0"

nyanpasu-utils = { git = "https://github.com/libnyanpasu/nyanpasu-utils.git", features = [
  "specta",
] }

fs_extra = "1.3.0"

tauri-plugin-shell = "2.2"

# Logging & Tracing
log = "0.4.20"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "parking_lot",
] }
tracing-appender = { version = "0.2", features = ["parking_lot"] }
tracing = { workspace = true }
tracing-log = { version = "0.2" }

strum = { version = "0.27", features = ["derive"] }                       # for enum string conversion

atomic_enum = "0.3.0"                                                     # for atomic enum

# Local Dependencies
nyanpasu-ipc = { git = "https://github.com/libnyanpasu/nyanpasu-service.git", features = [
  "client",
  "specta",
] } # IPC bridge between the UI process and service process

enumflags2 = "0.7"                                                        # for enum flags

indexmap = { version = "2.2.3", features = ["serde"] }

itertools = "0.14"                                                        # sweet iterator utilities
rayon = "1.10"                                                            # for iterator parallel processing

futures-util = "0.3"

port_scanner = "0.1.5"

camino = { version = "1.1.9", features = ["serde1"] }

sysproxy = { git = "https://github.com/libnyanpasu/sysproxy-rs.git", version = "0.3" }

tauri-plugin-dialog = "2.2"

oneshot = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55", features = ["transactions"] }
windows-sys = { version = "0.60", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Shutdown",
  "Win32_Graphics_Gdi",
] }
windows-core = "0.61"

[features]
default = ["default-meta"]
nightly = []
verge-dev = []
default-meta = []
deadlock-detection = ["parking_lot/deadlock_detection"]

