[package]
name = "chimera"
version = "0.1.0"
description = "A Tauri App"
authors = ["chimera_rust@proton.me"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chimera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
serde = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
semver = "1.0"
chrono = "0.4"
rustc_version = "0.4"

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Strong typed api binding between typescript and rust
specta-typescript = { version = "0.0.12", features = ["serde"] }
tauri-specta = { version = "^2.0.0-rc.25", features = ["derive", "typescript"] }
specta = { version = "^2.0.0-rc.25", features = [
  "serde_json",
  "serde_yaml",
  "uuid",
  "url",
  "indexmap",
  "function",
] }

once_cell = "1.19.0"

parking_lot = { version = "0.12.1" }
# for builder pattern
derive_builder = "0.20"

url = "2"

anyhow = "1.0"

thiserror = { workspace = true }
# 
chimera-macro = { path = "../chimera-macro" }

nanoid = "0.5.0"

rand = "0.10"

reqwest = { workspace = true }

# Parallel/concurrent download engine. We disable the bundled reqwest adapter
# (it targets reqwest 0.13 while this workspace pins 0.12) and implement our own
# BoltLoadAdapter over the existing reqwest 0.12 client in `core::download`.
bolt-load = { version = "0.1", default-features = false, features = [
  "tokio",
  "serde",
  "tracing",
] }
# the CancellationToken type required by bolt-load's TaskBuilder
smol-cancellation-token = "0.1"

backon = { version = "1.0.1", features = ["tokio-sleep"] }                # for backoff retry

base64 = "0.22"
hex = "0.4"
percent-encoding = "2.3.1"

# todo: use another crate.
serde_yaml = { version = "0.9" }
sha2 = "0.11"

ambassador = "0.5.0"                                                      # for trait delegation

# Common Utilities
tokio = { workspace = true }

# System Utilities
dunce = "1.0.4"   
which = "8"
open = "5.0.1"
runas = { git = "https://github.com/libnyanpasu/rust-runas.git" }
whoami = "1.5.1"
auto-launch = { git = "https://github.com/libnyanpasu/auto-launch.git", version = "0.5" }

fs-err = { version = "3.1.2", features = ["tokio"] }

convert_case = "0.11.0"

nyanpasu-utils = { git = "https://github.com/libnyanpasu/nyanpasu-utils.git", features = [
  "specta",
] }

chimera_utils = { git = "https://github.com/MFSGA/Chimera_Utils.git", features = [
  "specta",
] }
#chimera_utils = { path = "../../../Chimera_Utils/chimera_utils/", features = [
#  "specta",
#] }

fs_extra = "1.3.0"

axum = "0.8"

tauri-plugin-shell = "2.3.5"
tauri-plugin-notification = "2.3.3"

# Logging & Tracing
log = "0.4.20"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "parking_lot",
] }
tracing-appender = { version = "0.2", features = ["parking_lot"] }
tracing = { workspace = true }
tracing-log = { version = "0.2" }

strum = { version = "0.28", features = ["derive"] }                       # for enum string conversion

atomic_enum = "0.3.0"                                                     # for atomic enum

# Local Dependencies
nyanpasu-ipc = { git = "https://github.com/libnyanpasu/nyanpasu-service.git", features = [
  "client",
  "specta",
] } # IPC bridge between the UI process and service process

chimera-ipc = {git = "https://github.com/MFSGA/Chimera_Service", features = [
  "client",
  "specta",
] } # IPC bridge between the UI process and service process

#chimera_utils = { path = "../../../Chimera_Utils/chimera_utils/", features = [
#  "specta",
#] }
# Local Dependencies
#chimera-ipc = {path = "../../../Chimera_Service/chimera_ipc/", features = [
#  "client",
#  "specta",
#] } # IPC bridge between the UI process and service process

enumflags2 = "0.7"                                                        # for enum flags

indexmap = { version = "2.2.3", features = ["serde"] }

itertools = "0.15"                                                        # sweet iterator utilities
rayon = "1.10"                                                            # for iterator parallel processing

futures = "0.3"
futures-util = "0.3"

port_scanner = "0.1.5"

camino = { version = "1.1.9", features = ["serde1"] }

sysproxy = { git = "https://github.com/libnyanpasu/sysproxy-rs.git", version = "0.3" }

tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-deep-link = "2.4.9"

oneshot = "0.2"

time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
semver = "1.0"

chrono = { version = "0.4", features = ["serde"] }

adler = "1.0.2"

# Database
redb = "4.0.0"

tracing-attributes = "0.1"

tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
rust-i18n = "4"

dashmap = "6"
async-trait = "0.1"
tempfile = "3"
flate2 = "1"
zip = "8"
num_cpus = "1"
sysinfo = "0.39"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-global-shortcut = "2.3.2"

[target.'cfg(windows)'.dependencies]
deelevate = "0.2.0"
winreg = { version = "0.55", features = ["transactions"] }
windows-sys = { version = "0.61", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Shutdown",
  "Win32_Graphics_Gdi",
] }
windows-core = "0.61"
# webview2-com = "0.38"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
nix = { version = "0.31", features = ["user"] }

[features]
default = ["default-meta"]
nightly = []
verge-dev = []
default-meta = []
deadlock-detection = ["parking_lot/deadlock_detection"]
